[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ZnaKes"
version = "0.0.1"
authors = [
  { name="alvaro-alonso", email="aa@ise.tu-berlin.de" },
]
description = "A python client library to easily generate arguments for zero-knowledge proofs (ZKPs)"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Topic :: Education",
    "Topic :: Security :: Cryptography",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers"
]

[project.urls]
Homepage = "https://github.com/ZK-Plus/ZnaKes"
Issues = "https://github.com/ZK-Plus/ZnaKes/issues"
